test/spec_vectors/store/fail/module_41.wat
(module (memory 1) (func (i32.store (f32.const 0) (i32.const 0))))